# TChat

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN_SYSTEM.md  EXPORT_IMPORT_COMPLETE.md  EXPORT_IMPORT_PATCH.kt  EXPORT_IMPORT_STATUS.md  README-cc.md  README.md  README_EN.md  README_HK.md  README_ZH_HK.md  README_ZH_MO.MD  README_ZH_TW.md  TCHAT_ANDROID_LOCAL_SSH_MCP_REQUIREMENTS.md  TCHAT_NAAPI_BLUEPRINT_PROGRESS.md  TCHAT_PROVIDER_REGISTRY_PROGRESS.md  TCHAT_RESPONSE_SPEED_PROGRESS.md  TChat_github_ci_security_notes.md  TChat_naapi_integration_plan.md  TChat_性能优化建议-2026-05-11.md  TChat_新功能制作建议-2026-05-11.md  chat-ui-reference.html  gradle.properties  lint_issues_summary.txt  settings.gradle.kts  优化问题与修复方式.md  安卓端可新增功能清单-2026-05-11.md  项目优化建议-2026-05-10.md
.claude/: settings.local.json
.github/: FUNDING.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/tchat/wanxiaot/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  imgui_bridge.cpp  jungle_helper_ui.cpp  jungle_helper_ui.h
app/src/main/java/com/tchat/wanxiaot/: MainActivity.kt
app/src/main/res/drawable/: ic_github.xml
app/src/main/res/values/: themes.xml
app/src/main/res/xml/: file_paths.xml
core/: build.gradle.kts
data/: build.gradle.kts
data/schemas/com.tchat.data.database.AppDatabase/: 28.json  29.json  30.json  31.json
design-system/: build.gradle.kts
feature-chat/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
network/: build.gradle.kts
todo/: TASKS.md
(+222 files in other folders)
